--- a/src/app/modules/auth/sign-in/sign-in.component.html
+++ b/src/app/modules/auth/sign-in/sign-in.component.html
@@ -11,7 +11,7 @@
             <div class="mt-8 text-4xl font-extrabold tracking-tight leading-tight text-center">Sign in</div>
             <!-- Alert -->
             <fuse-alert
-                class="mt-8 -mb-4"
+                class="mt-8 -mb-4 text-red-500"
                 *ngIf="showAlert"
                 [appearance]="'outline'"
                 [showIcon]="false"
