--- a/src/app/modules/notification/upcoming-visits/upcoming-visits.component.html
+++ b/src/app/modules/notification/upcoming-visits/upcoming-visits.component.html
@@ -1,1 +1,199 @@
-<p>upcoming-visits works!</p>
+<div
+    class="
+        px-10
+        sm:absolute sm:inset-0
+        flex flex-col flex-auto
+        min-w-0
+        sm:overflow-scroll
+        bg-card
+        dark:bg-transparent
+    "
+>
+    <div class="row pt-3">
+        <div class="col-lg-9 col-sm-12">
+            <div class="heading">Upcoming Tour Plan</div>
+        </div>
+    </div>
+
+
+    <div class="mt-2">
+
+
+        <div class="mat-table__wrapper  border shadow-xs rounded-sm bg-gray-50 ">
+            <!--[style.height]="gridHeight"-->
+            <mat-table
+                class="lmat-elevation-z8 overflow-scroll"
+                [style.height]="gridHeight"
+                #table
+                [dataSource]="
+                    dataSource
+                "
+                matSort
+                #sort1="matSort"
+                matSortActive="id"
+                matSortDirection="asc"
+                matSortDisableClear
+            >
+                <ng-container matColumnDef="NotificationDescription">
+                    <mat-header-cell *matHeaderCellDef
+                    >Notification Description
+                    </mat-header-cell
+                    >
+                    <mat-cell *matCellDef="let notification">{{
+                        notification.NotificationText
+                        }}</mat-cell>
+                </ng-container>
+
+                <ng-container matColumnDef="CreatedDateTime">
+                    <mat-header-cell *matHeaderCellDef
+                    >Created At
+                    </mat-header-cell
+                    >
+                    <mat-cell *matCellDef="let notification">{{
+                        notification.CreateDateTime
+                        }}</mat-cell>
+                </ng-container>
+
+                <ng-container matColumnDef="RequestedAt">
+                    <mat-header-cell style="min-width: 120px;" *matHeaderCellDef>Requested At</mat-header-cell>
+                    <mat-cell style="min-width: 120px;" *matCellDef="let notification">{{
+                        notification.RequestedTimeInString
+                        }}</mat-cell>
+                </ng-container>
+
+<!--                <ng-container matColumnDef="Name">-->
+<!--                    <mat-header-cell *matHeaderCellDef-->
+<!--                    >Name-->
+<!--                    </mat-header-cell-->
+<!--                    >-->
+<!--                    <mat-cell *matCellDef="let notification">{{-->
+<!--                        notification.CustomerName-->
+<!--                        }}</mat-cell>-->
+<!--                </ng-container>-->
+
+<!--                <ng-container matColumnDef="FatherName">-->
+<!--                    <mat-header-cell *matHeaderCellDef>Father Name</mat-header-cell>-->
+<!--                    <mat-cell *matCellDef="let notification">{{-->
+<!--                        notification.FatherName-->
+<!--                        }}</mat-cell>-->
+<!--                </ng-container>-->
+
+<!--                <ng-container matColumnDef="Address">-->
+<!--                    <mat-header-cell *matHeaderCellDef>Address</mat-header-cell>-->
+<!--                    <mat-cell *matCellDef="let notification">{{-->
+<!--                        notification.PermanentAddress-->
+<!--                        }}</mat-cell>-->
+<!--                </ng-container>-->
+
+<!--                <ng-container matColumnDef="Markup">-->
+<!--                    <mat-header-cell *matHeaderCellDef-->
+<!--                    >Markup-->
+<!--                    </mat-header-cell-->
+<!--                    >-->
+<!--                    <mat-cell class="text-center" *matCellDef="let notification">{{-->
+<!--                        notification.Markup-->
+<!--                        }}</mat-cell>-->
+<!--                </ng-container>-->
+
+<!--                <ng-container matColumnDef="Sl">-->
+<!--                    <mat-header-cell *matHeaderCellDef-->
+<!--                    >Sanction Limit-->
+<!--                    </mat-header-cell-->
+<!--                    >-->
+<!--                    <mat-cell class="text-center" *matCellDef="let notification">{{-->
+<!--                        notification.SanctionLimit-->
+<!--                        }}</mat-cell>-->
+<!--                </ng-container>-->
+
+<!--                <ng-container matColumnDef="Ndd">-->
+<!--                    <mat-header-cell *matHeaderCellDef-->
+<!--                    >Due Date-->
+<!--                    </mat-header-cell-->
+<!--                    >-->
+<!--                    <mat-cell *matCellDef="let notification">{{-->
+<!--                        notification.NextDueDate-->
+<!--                        }}</mat-cell>-->
+<!--                </ng-container>-->
+
+<!--                <ng-container matColumnDef="Lcno">-->
+<!--                    <mat-header-cell *matHeaderCellDef-->
+<!--                    >LC #-->
+<!--                    </mat-header-cell-->
+<!--                    >-->
+<!--                    <mat-cell *matCellDef="let notification">{{-->
+<!--                        notification.LoanCaseNumber-->
+<!--                        }}</mat-cell>-->
+<!--                </ng-container>-->
+
+
+<!--                <ng-container matColumnDef="Tsa">-->
+<!--                    <mat-header-cell *matHeaderCellDef-->
+<!--                    >Total Sanction Amount-->
+<!--                    </mat-header-cell-->
+<!--                    >-->
+<!--                    <mat-cell *matCellDef="let notification">{{-->
+<!--                        notification.TotalSanctionAmount-->
+<!--                        }}</mat-cell>-->
+<!--                </ng-container>-->
+
+<!--                <ng-container matColumnDef="Los">-->
+<!--                    <mat-header-cell *matHeaderCellDef-->
+<!--                    >Loan Outstanding-->
+<!--                    </mat-header-cell-->
+<!--                    >-->
+<!--                    <mat-cell *matCellDef="let notification">{{-->
+<!--                        notification.LoanOutstanding-->
+<!--                        }}</mat-cell>-->
+<!--                </ng-container>-->
+
+                <mat-header-row
+                    *matHeaderRowDef="displayedColumns; sticky: true"
+                    class="table-header-background"
+                ></mat-header-row>
+
+                <mat-row
+                    *matRowDef="let row; columns: displayedColumns"
+                ></mat-row>
+            </mat-table>
+
+            <div class="mat-table__message" *ngIf="loading">
+                Please wait....
+            </div>
+
+            <!-- <div *ngIf="matTableLenght" class="mat-select" style="padding: 5px">
+                        <span class="font-bold text-green">Items per page:</span>
+
+                <mat-select
+                    display="inline"
+                    [(value)]="itemsPerPage"
+                    (valueChange)="paginate(1, $event)"
+                    style="
+                        width: 50px;
+                        margin-left: 15px;
+                        display: inline-block;
+                        margin-right: 10px;
+                    "
+                >
+                    <mat-option [value]="5">5</mat-option>
+                    <mat-option [value]="10">10</mat-option>
+                    <mat-option [value]="25">25</mat-option>
+                    <mat-option [value]="50">50</mat-option>
+                </mat-select>
+                <button (click)="paginate(1)">First</button>
+                <pagination-controls
+                    display="inline"
+                    (pageChange)="paginate($event)"
+                    style="display: inline-block"
+                ></pagination-controls>
+                <button
+                    (click)="paginate(Math.ceil(totalItems / itemsPerPage))"
+                >
+                    Last
+                </button>
+                <p style="float: right">
+                    Total <b>{{ totalItems }}</b> items
+                </p>
+            </div> -->
+        </div>
+
+    </div>
