--- a/src/app/modules/tour-plan/signature-pad-for-tour/signature-pad-for-tour.component.html
+++ b/src/app/modules/tour-plan/signature-pad-for-tour/signature-pad-for-tour.component.html
@@ -6,12 +6,23 @@
 
 <signature-pad [options]="signaturePadOptions" (onBeginEvent)="drawStart()" *ngIf="!is_referback"
                (onEndEvent)="drawComplete()"></signature-pad>
-<div class="row">
-    <div class="col-12">
-        <input class="border w-full" [(ngModel)]="remarks" placeholder="Remarks"/>
+<!--<div class="row">-->
+<!--        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">-->
+<!--        <input  class="mat-form-field-fluid w-full" appearance="appearance" [(ngModel)]="remarks" placeholder="Remarks"/>-->
+<!--        </div>-->
+<!--</div>-->
+<div class="mx-2 border-t pt-2">
+    <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 overflow-hidden">
+        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+            <mat-label>Remarks</mat-label>
+            <input matInput [(ngModel)]="remarks" placeholder="Remarks"/>
+        </mat-form-field>
     </div>
 </div>
-<div>
-    <button mat-flat-button color="warn" (click)="clearSignature()">Clear</button>
-    <button mat-flat-button color="primary" (click)="submit()">Submit</button>
+<div class="row">
+    <div class="col-lg-12 text-right" >
+        <button class=" mx-2 mat-raised-button mat-button-base kt-login__btn-primary btn-block mat-primary bg-red-500" mat-flat-button color="warn" (click)="clearSignature()"><mat-icon class="me-2"> clear_all</mat-icon>Clear</button>
+        <button class=" mx-2 mat-raised-button mat-button-base kt-login__btn-primary btn-block mat-primary" mat-flat-button color="primary" (click)="submit()"><mat-icon class="me-2">check_circle</mat-icon>Submit</button>
+    </div>
+
 </div>
