--- a/src/app/modules/dashboard/branch-manager-dashboard/branch-manager-dashboard.component.html
+++ b/src/app/modules/dashboard/branch-manager-dashboard/branch-manager-dashboard.component.html
@@ -18,7 +18,7 @@
             </div>
             <div class="form-group col-lg-3">
                 <button class="btn btn-primary mat-flat-button mr-1 bg-gray-500 mt-2 mat-primary" mat-raised-button
-                    (click)="getData()">
+                        (click)="getData()">
                     <mat-icon class="mr-2">search</mat-icon>
                     Search
                 </button>
@@ -40,12 +40,13 @@
                     <div class="shadow-sm border graph-box" style="height: 365px;">
                         <div id="chart" *ngIf="chartPerformanceIndicators" class=" mt-0 py-3">
                             <apx-chart [series]="chartPerformanceIndicators?.series"
-                                [chart]="chartPerformanceIndicators?.chart"
-                                [labels]="chartPerformanceIndicators?.labels"
-                                [title]="chartPerformanceIndicators?.title" [theme]="chartPerformanceIndicators?.theme"
-                                [responsive]="chartPerformanceIndicators?.responsive"
-                                [noData]="chartPerformanceIndicators?.noData"
-                                [colors]="chartPerformanceIndicators?.colors">
+                                       [chart]="chartPerformanceIndicators?.chart"
+                                       [labels]="chartPerformanceIndicators?.labels"
+                                       [title]="chartPerformanceIndicators?.title"
+                                       [theme]="chartPerformanceIndicators?.theme"
+                                       [responsive]="chartPerformanceIndicators?.responsive"
+                                       [noData]="chartPerformanceIndicators?.noData"
+                                       [colors]="chartPerformanceIndicators?.colors">
 
                             </apx-chart>
                         </div>
@@ -56,9 +57,9 @@
                     <div class="shadow-sm border graph-box" style="height: 365px;">
                         <div id="chart" *ngIf="chartLoanPortfolio" class=" mt-0 py-3">
                             <apx-chart [series]="chartLoanPortfolio?.series" [chart]="chartLoanPortfolio?.chart"
-                                [labels]="chartLoanPortfolio?.labels" [title]="chartLoanPortfolio?.title"
-                                [theme]="chartLoanPortfolio?.theme" [responsive]="chartLoanPortfolio?.responsive"
-                                [noData]="chartLoanPortfolio.noData"></apx-chart>
+                                       [labels]="chartLoanPortfolio?.labels" [title]="chartLoanPortfolio?.title"
+                                       [theme]="chartLoanPortfolio?.theme" [responsive]="chartLoanPortfolio?.responsive"
+                                       [noData]="chartLoanPortfolio.noData"></apx-chart>
                         </div>
                     </div>
 
@@ -71,9 +72,9 @@
                     <div class="shadow-sm border graph-box" style="height: 365px;">
                         <div id="chart" *ngIf="chartnoOfBorrowers" class=" mt-0 py-3">
                             <apx-chart [series]="chartnoOfBorrowers?.series" [chart]="chartnoOfBorrowers?.chart"
-                                [labels]="chartnoOfBorrowers?.labels" [title]="chartnoOfBorrowers?.title"
-                                [theme]="chartnoOfBorrowers?.theme" [responsive]="chartnoOfBorrowers?.responsive"
-                                [noData]="chartnoOfBorrowers.noData"></apx-chart>
+                                       [labels]="chartnoOfBorrowers?.labels" [title]="chartnoOfBorrowers?.title"
+                                       [theme]="chartnoOfBorrowers?.theme" [responsive]="chartnoOfBorrowers?.responsive"
+                                       [noData]="chartnoOfBorrowers.noData"></apx-chart>
                         </div>
                     </div>
 
@@ -103,43 +104,42 @@
                         </thead> -->
 
                         <tbody>
-                            <!-- <ng-template > -->
-                            <tr *ngFor="let items of DisbursmentAchievement ; let row=index" class="text-center">
-                                <td>
-                                    <div class="d-grid">
-                                        <div>
-                                           {{dashboardService.getCamelCaseString(items[0],0)}}
-                                        </div>
-                                        <div class="fw-bold">
-                                            {{dashboardService.getCamelCaseString(items[0],1)}}
-                                        </div>
+                        <!-- <ng-template > -->
+                        <tr *ngFor="let items of DisbursmentAchievement ; let row=index" class="text-center">
+                            <td>
+                                <div class="d-grid">
+                                    <div>
+                                        {{dashboardService.getCamelCaseString(items[0], 0)}}
                                     </div>
-                                </td>
-                                <td>
-                                    <div class="d-grid">
-                                        <div>
-                                            {{dashboardService.getCamelCaseString(items[1],0)}}
-                                         </div>
-                                         <div class="fw-bold">
-                                             {{dashboardService.getCamelCaseString(items[1],1)}}
-                                         </div>
+                                    <div class="fw-bold">
+                                        {{dashboardService.getCamelCaseString(items[0], 1)}}
                                     </div>
-                                </td>
-                                <td>
-                                    <div class="d-grid">
-                                        <div>
-                                            {{dashboardService.getCamelCaseString(items[2],0)}}
-                                         </div>
-                                         <div class="fw-bold">
-                                             {{dashboardService.getCamelCaseString(items[2],1)}}
-                                         </div>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="d-grid">
+                                    <div>
+                                        {{dashboardService.getCamelCaseString(items[1], 0)}}
                                     </div>
-                                </td>
-                            </tr>
+                                    <div class="fw-bold">
+                                        {{dashboardService.getCamelCaseString(items[1], 1)}}
+                                    </div>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="d-grid">
+                                    <div>
+                                        {{dashboardService.getCamelCaseString(items[2], 0)}}
+                                    </div>
+                                    <div class="fw-bold">
+                                        {{dashboardService.getCamelCaseString(items[2], 1)}}
+                                    </div>
+                                </div>
+                            </td>
+                        </tr>
                         </tbody>
                     </table>
                 </div>
-
 
 
             </div>
@@ -150,67 +150,70 @@
                     </p>
                     <table class="table  table-bordered">
                         <tbody>
-                            <tr *ngFor="let items of RecoveryAchievement" class="text-center">
-                                <td>
-                                    <div class="d-grid">
-                                        <div>
-                                           {{dashboardService.getCamelCaseString(items[0],0)}}
-                                        </div>
-                                        <div class="fw-bold">
-                                            {{dashboardService.getCamelCaseString(items[0],1)}}
-                                        </div>
+                        <tr *ngFor="let items of RecoveryAchievement" class="text-center">
+                            <td>
+                                <div class="d-grid">
+                                    <div>
+                                        {{dashboardService.getCamelCaseString(items[0], 0)}}
                                     </div>
-                                </td>
-                                <td>
-                                    <div class="d-grid">
-                                        <div>
-                                            {{dashboardService.getCamelCaseString(items[1],0)}}
-                                         </div>
-                                         <div class="fw-bold">
-                                             {{dashboardService.getCamelCaseString(items[1],1)}}
-                                         </div>
+                                    <div class="fw-bold">
+                                        {{dashboardService.getCamelCaseString(items[0], 1)}}
                                     </div>
-                                </td>
-                                <td>
-                                    <div class="d-grid">
-                                        <div>
-                                            {{dashboardService.getCamelCaseString(items[2],0)}}
-                                         </div>
-                                         <div class="fw-bold">
-                                             {{dashboardService.getCamelCaseString(items[2],1)}}
-                                         </div>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="d-grid">
+                                    <div>
+                                        {{dashboardService.getCamelCaseString(items[1], 0)}}
                                     </div>
-                                </td>
-                            </tr>
+                                    <div class="fw-bold">
+                                        {{dashboardService.getCamelCaseString(items[1], 1)}}
+                                    </div>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="d-grid">
+                                    <div>
+                                        {{dashboardService.getCamelCaseString(items[2], 0)}}
+                                    </div>
+                                    <div class="fw-bold">
+                                        {{dashboardService.getCamelCaseString(items[2], 1)}}
+                                    </div>
+                                </div>
+                            </td>
+                        </tr>
                         </tbody>
                     </table>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-12 table-responsive">
+                    <p class="heading text-lg">
+                        Circle Positions
+                    </p>
                     <table class="table table-bordered">
                         <thead>
-                            <tr class="table-header-background">
-                                <th>MCO Circles</th>
-                                <th>Disbursement</th>
-                                <th>Recovery</th>
-                                <th>NPL</th>
-                                <th>SAM</th>
-                                <th>Outstanding</th>
-                                <th>Audit Paras</th>
+                        <tr class="table-header-background">
+                            <th>MCO Circles</th>
+                            <th>Disbursement</th>
+                            <th>Recovery</th>
+                            <th>NPL</th>
+                            <th>SAM</th>
+                            <th>Outstanding</th>
+                            <th>Audit Paras</th>
 
-                            </tr>
+                        </tr>
                         </thead>
                         <tbody>
-                            <tr *ngFor="let item of CirclePositions">
-                                <td>{{item?.Name}}</td>
-                                <td>{{item?.TotalDisbursment}}</td>
-                                <td>{{item?.TotalRecovery}}</td>
-                                <td>{{item?.NplOS}}</td>
-                                <td>{{item?.SamOS}}</td>
-                                <td>{{item?.TotalOS}}</td>
-                                <td>{{item?.AuditParas}}</td>
-                            </tr>
+                        <tr *ngFor="let item of CirclePositions">
+                            <td>{{item?.Name}}</td>
+                            <td>{{item?.TotalDisbursment}}</td>
+                            <td>{{item?.TotalRecovery}}</td>
+                            <td>{{item?.NplOS}}</td>
+                            <td>{{item?.SamOS}}</td>
+                            <td>{{item?.TotalOS}}</td>
+                            <td>{{item?.AuditParas}}</td>
+                        </tr>
                         </tbody>
 
                     </table>
