--- a/src/app/modules/dashboard/recovery-officer-dashboard/recovery-officer-dashboard.component.html
+++ b/src/app/modules/dashboard/recovery-officer-dashboard/recovery-officer-dashboard.component.html
@@ -39,7 +39,7 @@
         <div class="flex flex-auto overflow-x-hidden overflow-y-scroll" style="flex-direction: column;">
             <div class="row">
                 <div class="col-lg-6 py-3">
-                    <div class="shadow-sm border graph-box"style="height: 365px;">
+                    <div class="shadow-sm border graph-box" style="height: 365px;">
                         <div id="chart" class=" m-0 pt-2">
                             <apx-chart
                                 [series]="chartOptions?.series"
@@ -75,31 +75,31 @@
                             <td>
                                 <div class="d-grid">
                                     <div>
-                                       {{dashboardService.getCamelCaseString(items[0],0)}}
+                                        {{dashboardService.getCamelCaseString(items[0], 0)}}
                                     </div>
                                     <div class="fw-bold">
-                                        {{dashboardService.getCamelCaseString(items[0],1)}}
+                                        {{dashboardService.getCamelCaseString(items[0], 1)}}
                                     </div>
                                 </div>
                             </td>
                             <td>
                                 <div class="d-grid">
                                     <div>
-                                        {{dashboardService.getCamelCaseString(items[1],0)}}
-                                     </div>
-                                     <div class="fw-bold">
-                                         {{dashboardService.getCamelCaseString(items[1],1)}}
-                                     </div>
+                                        {{dashboardService.getCamelCaseString(items[1], 0)}}
+                                    </div>
+                                    <div class="fw-bold">
+                                        {{dashboardService.getCamelCaseString(items[1], 1)}}
+                                    </div>
                                 </div>
                             </td>
                             <td>
                                 <div class="d-grid">
                                     <div>
-                                        {{dashboardService.getCamelCaseString(items[2],0)}}
-                                     </div>
-                                     <div class="fw-bold">
-                                         {{dashboardService.getCamelCaseString(items[2],1)}}
-                                     </div>
+                                        {{dashboardService.getCamelCaseString(items[2], 0)}}
+                                    </div>
+                                    <div class="fw-bold">
+                                        {{dashboardService.getCamelCaseString(items[2], 1)}}
+                                    </div>
                                 </div>
                             </td>
                         </tr>
@@ -109,12 +109,12 @@
             </div>
             <div class="row  justify-content-md-center">
                 <div class="col-lg-12 table-responsive">
-                    <p class="heading mb-2 text-lg">Branch Wise within Allocated Branches</p>
+                    <p class="heading mb-2 text-lg">Circle Wise within Allocated Branches</p>
                     <table class="table  table-striped">
 
                         <thead>
                         <tr class="table-header-background">
-                            <th scope="col">Branch</th>
+                            <th scope="col">Circle</th>
                             <th scope="col">Disbursement</th>
                             <th scope="col">Recovery</th>
                             <th scope="col">NPL</th>
@@ -137,7 +137,7 @@
 
 
             </div>
-            
+
 
         </div>
 
