--- a/src/app/modules/dashboard/regional-cheif/regional-cheif.component.html
+++ b/src/app/modules/dashboard/regional-cheif/regional-cheif.component.html
@@ -64,38 +64,6 @@
                     </div>
                 </div>
             </div>
-            <div class="row  justify-content-md-center">
-                <div class="col-lg-12 table-responsive">
-                    <p class="heading mb-2 text-lg">Circle Wise within Allocated Branches</p>
-                    <table class="table  table-striped">
-
-                        <thead>
-                        <tr class="table-header-background">
-                            <th scope="col">Branch</th>
-                            <th scope="col">Disbursement</th>
-                            <th scope="col">Recovery</th>
-                            <th scope="col">NPL</th>
-                            <th scope="col">SAM</th>
-                            <th scope="col">Outstanding</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <tr *ngFor="let item of CirclePositions | paginate: { itemsPerPage: 5, currentPage: p }">
-                            <td>{{item.Name}}</td>
-                            <td>{{item.TotalDisbursment}}</td>
-                            <td>{{item.TotalRecovery}}</td>
-                            <td>{{item.NplOS}}</td>
-                            <td>{{item.SamOS}}</td>
-                            <td>{{item.TotalOS}}</td>
-                        </tr>
-                        </tbody>
-                    </table>
-                    <pagination-controls (pageChange)="p = $event" class="my-pagination"></pagination-controls>
-                </div>
-
-
-            </div>
-
             <div class="row">
                 <div class="col-lg-6 table-responsive">
                     <p class="heading mb-2 text-lg">Recovery</p>
@@ -108,43 +76,106 @@
                             <th scope="col">%age</th>
                         </tr>
                         </thead> -->
-                        <tbody>
-                            <tr *ngFor="let items of RecoveryAchievement" class="text-center">
-                                <td>
-                                    <div class="d-grid">
-                                        <div>
-                                           {{dashboardService.getCamelCaseString(items[0],0)}}
-                                        </div>
-                                        <div class="fw-bold">
-                                            {{dashboardService.getCamelCaseString(items[0],1)}}
-                                        </div>
+                        <tbody *ngIf="RecoveryAchievement">
+                        <tr *ngFor="let items of RecoveryAchievement" class="text-center">
+                            <td>
+                                <div class="d-grid">
+                                    <div>
+                                        {{dashboardService.getCamelCaseString(items[0], 0)}}
                                     </div>
-                                </td>
-                                <td>
-                                    <div class="d-grid">
-                                        <div>
-                                            {{dashboardService.getCamelCaseString(items[1],0)}}
-                                         </div>
-                                         <div class="fw-bold">
-                                             {{dashboardService.getCamelCaseString(items[1],1)}}
-                                         </div>
+                                    <div class="fw-bold">
+                                        {{dashboardService.getCamelCaseString(items[0], 1)}}
                                     </div>
-                                </td>
-                                <td>
-                                    <div class="d-grid">
-                                        <div>
-                                            {{dashboardService.getCamelCaseString(items[2],0)}}
-                                         </div>
-                                         <div class="fw-bold">
-                                             {{dashboardService.getCamelCaseString(items[2],1)}}
-                                         </div>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="d-grid">
+                                    <div>
+                                        {{dashboardService.getCamelCaseString(items[1], 0)}}
                                     </div>
-                                </td>
-                            </tr>
+                                    <div class="fw-bold">
+                                        {{dashboardService.getCamelCaseString(items[1], 1)}}
+                                    </div>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="d-grid">
+                                    <div>
+                                        {{dashboardService.getCamelCaseString(items[2], 0)}}
+                                    </div>
+                                    <div class="fw-bold">
+                                        {{dashboardService.getCamelCaseString(items[2], 1)}}
+                                    </div>
+                                </div>
+                            </td>
+                        </tr>
+                        </tbody>
+                        <tbody *ngIf="!RecoveryAchievement">
+                        <tr>
+                            <td>Target<br/><strong>0</strong></td>
+                            <td>Achievement<br/> <strong>0</strong></td>
+                            <td>Percentage(%)<br/> <strong>0</strong></td>
+                        </tr>
+                        <tr>
+                            <td>Corresponding Calender Year Target<br/> <strong>0</strong></td>
+                            <td>Corresponding Calender Year Achievement<br/> <strong>0</strong></td>
+                            <td>Corresponding Calender Year Percentage(%)<br/> <strong>0</strong></td>
+
+                        </tr>
+                        <tr>
+                            <td>Fiscal Calender Year Target<br/> <strong>0</strong></td>
+                            <td>Fiscal Calender Year Achievement<br/> <strong>0</strong></td>
+                            <td>Fiscal Calender Year Percentage(%)<br/> <strong>0</strong></td>
+
+                        </tr>
                         </tbody>
                     </table>
                 </div>
             </div>
+
+            <div class="row  justify-content-md-center">
+                <div class="col-lg-12 table-responsive">
+                    <p class="heading mb-2 text-lg">Branch Wise within Allocated Branches</p>
+                    <table class="table  table-striped">
+
+                        <thead>
+                        <tr class="table-header-background">
+                            <th scope="col">Branch</th>
+                            <th scope="col">Disbursement</th>
+                            <th scope="col">Recovery</th>
+                            <th scope="col">NPL</th>
+                            <th scope="col">SAM</th>
+                            <th scope="col">Outstanding</th>
+                        </tr>
+                        </thead>
+                        <tbody *ngIf="CirclePositions">
+                        <tr *ngFor="let item of CirclePositions | paginate: { itemsPerPage: 5, currentPage: p }">
+                            <td>{{item.Name}}</td>
+                            <td>{{item.TotalDisbursment}}</td>
+                            <td>{{item.TotalRecovery}}</td>
+                            <td>{{item.NplOS}}</td>
+                            <td>{{item.SamOS}}</td>
+                            <td>{{item.TotalOS}}</td>
+                        </tr>
+                        </tbody>
+                        <tbody *ngIf="!CirclePositions">
+                        <tr>
+                            <td>{{'No Data'}}</td>
+                            <td>{{'No Data'}}</td>
+                            <td>{{'No Data'}}</td>
+                            <td>{{'No Data'}}</td>
+                            <td>{{'No Data'}}</td>
+                            <td>{{'No Data'}}</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                    <pagination-controls *ngIf="CirclePositions" (pageChange)="p = $event"
+                                         class="my-pagination"></pagination-controls>
+                </div>
+
+
+            </div>
+
 
         </div>
 
