--- a/src/app/modules/dashboard/president-ztbl/president-ztbl.component.html
+++ b/src/app/modules/dashboard/president-ztbl/president-ztbl.component.html
@@ -49,7 +49,7 @@
                                 [theme]="chartOptions1.theme"
                                 [responsive]="chartOptions1.responsive"
                                 [noData]="chartOptions1.noData"
-
+                                [colors]="chartOptions1?.colors"
                             ></apx-chart>
                         </div>
                     </div>
