--- a/src/app/modules/tour-plan/signature-pad-for-tour/signature-pad-for-tour.component.html
+++ b/src/app/modules/tour-plan/signature-pad-for-tour/signature-pad-for-tour.component.html
@@ -4,8 +4,11 @@
     </mat-icon>
 </button>
 
-<signature-pad [options]="signaturePadOptions" (onBeginEvent)="drawStart()" *ngIf="!is_referback"
-               (onEndEvent)="drawComplete()"></signature-pad>
+<ng-container>
+    <signature-pad [options]="signaturePadOptions" (onBeginEvent)="drawStart()" [hidden]="is_referback"
+                   (onEndEvent)="drawComplete()"></signature-pad>
+</ng-container>
+
 <!--<div class="row">-->
 <!--        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">-->
 <!--        <input  class="mat-form-field-fluid w-full" appearance="appearance" [(ngModel)]="remarks" placeholder="Remarks"/>-->
@@ -20,9 +23,17 @@
     </div>
 </div>
 <div class="row">
-    <div class="col-lg-12 text-right" >
-        <button class=" mx-2 mat-raised-button mat-button-base kt-login__btn-primary btn-block mat-primary bg-red-500" mat-flat-button color="warn" (click)="clearSignature()"><mat-icon class="me-2"> clear_all</mat-icon>Clear</button>
-        <button class=" mx-2 mat-raised-button mat-button-base kt-login__btn-primary btn-block mat-primary" mat-flat-button color="primary" (click)="submit()"><mat-icon class="me-2">check_circle</mat-icon>Submit</button>
+    <div class="col-lg-12 text-right">
+        <button class=" mx-2 mat-raised-button mat-button-base kt-login__btn-primary btn-block mat-primary bg-red-500"
+                mat-flat-button color="warn" (click)="clearSignature()">
+            <mat-icon class="me-2"> clear_all</mat-icon>
+            Clear
+        </button>
+        <button class=" mx-2 mat-raised-button mat-button-base kt-login__btn-primary btn-block mat-primary"
+                mat-flat-button color="primary" (click)="submit()">
+            <mat-icon class="me-2">check_circle</mat-icon>
+            Submit
+        </button>
     </div>
 
 </div>
