tour plan for approval

--- a/src/app/modules/tour-plan/signature-pad-for-tour/signature-pad-for-tour.component.html
+++ b/src/app/modules/tour-plan/signature-pad-for-tour/signature-pad-for-tour.component.html
@@ -1,3 +1,5 @@
+<h2 class="heading" *ngIf="is_referback">Specify Reason to reffer Back</h2>
+<h2 class="heading" *ngIf="!is_referback">Add Signature to Approve Tour Plan</h2>
 <button mat-icon-button color="warn" (click)="close(true)" style="float: right;">
     <mat-icon>
         close
