tour plan for approval

--- a/src/app/modules/tour-plan/tour-approval-tab/tour-approval-tab.component.html
+++ b/src/app/modules/tour-plan/tour-approval-tab/tour-approval-tab.component.html
@@ -28,7 +28,7 @@
                         class=" mx-3 mat-raised-button mat-button-base kt-login__btn-primary btn-block mat-primary bg-red-500"
                         mat-flat-button color="warn"
                         (click)="$event.stopPropagation();change(activity,'R',i,activity.UserId)">
-                        <mat-icon class="me-2">arrow_back_ios</mat-icon>
+                        <mat-icon class="me-2">close</mat-icon>
                         Referback
                     </button>
                     <button mat-icon-button>
