--- a/src/app/modules/tour-plan/tour-approval-tab/tour-approval-tab.component.html
+++ b/src/app/modules/tour-plan/tour-approval-tab/tour-approval-tab.component.html
@@ -56,8 +56,8 @@
                     <tr *ngFor="let child of activity.TourPlans;let j=index">
                         <td style="width: 20%">{{getZoneName(child?.ZoneId)}}</td>
                         <td style="width: 20%">{{getBranchName(child?.BranchId)}}</td>
-                        <td style="width: 20%">{{child?.CircleCode}}</td>
-                        <td style="width: 20%">{{child.VisitedDate ? (child.VisitedDate | date:'dd-mm-yyyy') : '-'}}</td>
+                        <td style="width: 20%">{{child?.CircleCode?child?.CircleCode:"-"}}</td>
+                        <td style="width: 20%">{{child.VisitedDate ? dateChange(child?.VisitedDate) : '-'}}</td>
                         <td style="width: 20%">{{child.PurposeName ? child.PurposeName : '-'}}</td>
                         <td style="width: 20%">{{child.Remarks ? child.Remarks : '-'}}</td>
                         <td style="width: 20%">{{child?.StatusName}}</td>
